# my-auto

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README.zh-CN.md  pyproject.toml
.claude/skills/idea-develop/: SKILL.md
.claude/skills/idea-generate/: SKILL.md
.claude/skills/idea-review/: SKILL.md
.claude/skills/insight-absorb/: SKILL.md
.claude/skills/insight-connect/: SKILL.md
.claude/skills/insight-init/: SKILL.md
.claude/skills/insight-review/: SKILL.md
.claude/skills/insight-update/: SKILL.md
.claude/skills/learn-connect/: SKILL.md
.claude/skills/learn-from-insight/: SKILL.md
.claude/skills/learn-gap/: SKILL.md
.claude/skills/learn-init/: SKILL.md
.claude/skills/x-cookies/: SKILL.md
codex/: install-skills.sh
config/: modules.yaml
docs/plans/: 2026-05-04-codex-adaptation-design.md  2026-05-04-codex-adaptation-implementation.md
lib/: __init__.py  logging.py  obsidian_cli.py  orchestrator.py  resolver.py  scoring.py  storage.py  vault.py
lib/figures/: extractor.py
lib/sources/: alphaxiv.py  arxiv_api.py
modules/auto-digest/: SKILL_TODAY.md  module.yaml
modules/auto-reading/: SKILL_TODAY.md  module.yaml
modules/auto-x/: README.md  SKILL_TODAY.md  module.yaml
modules/learning/: README.md  README.zh-CN.md  SKILL_TODAY.md  module.yaml
modules/reading/: README.md  README.zh-CN.md  module.yaml
modules/x/: README.md  README.zh-CN.md  module.yaml
scripts/rl_math_foundations/: validate.py
shares/rl-math-foundations/: index.html
tests/: conftest.py
tests/core/: test_logging.py  test_obsidian_cli.py  test_orchestrator.py  test_storage.py  test_vault.py
tests/learning/: _sample_data.py  conftest.py  test_daily.py  test_evidence.py  test_materials.py  test_models.py  test_planner.py  test_route.py  test_skill_paths.py  test_state.py  test_today_full_pipeline.py  test_today_script.py  test_validation.py
tests/lib/: conftest.py  test_alphaxiv.py  test_arxiv_api.py  test_arxiv_pdf.py  test_assemble_html_script.py  test_extract_figures_script.py  test_fetch_pdf_script.py  test_figure_extractor.py  test_generate_digest.py  test_generate_note.py  test_html_template.py  test_logging.py  test_models.py  test_obsidian_cli.py  test_orchestrator.py  test_resolve_and_fetch.py  test_resolver.py  test_scan_recent_papers.py  test_scoring.py  test_search_and_filter.py  test_search_papers.py  test_storage.py  test_vault.py
tests/orchestration/: conftest.py  test_end_to_end.py
tests/reading/: _sample_data.py  conftest.py  test_alphaxiv.py  test_arxiv_api.py  test_arxiv_pdf.py  test_assemble_html_script.py  test_daily.py  test_extract_figures_script.py  test_fetch_pdf_script.py  test_figure_extractor.py  test_generate_digest.py  test_generate_note.py  test_html_template.py  test_models.py  test_papers.py  test_resolve_and_fetch.py  test_resolver.py  test_scan_recent_papers.py  test_scan_today_cli.py  test_scoring.py  test_search_papers.py  test_today_full_pipeline.py  test_today_script.py
tests/scripts/: test_rl_math_validate.py
tests/tools/: conftest.py  test_migrate_state.py  test_migrate_vault.py  test_rebuild_progress.py
tests/x/: _sample_data.py  conftest.py  test_archive.py  test_dedup.py  test_digest.py  test_fetcher_parser.py  test_import_cookies.py  test_models.py  test_scoring.py  test_skill_today_paths.py  test_today_script.py  test_x_digest_skill_paths.py
tools/: migrate_state.py  migrate_vault.py  rebuild_progress.py
(+271 files in other folders)
