[project]
name = "start-my-day"
version = "0.1.0"
description = "Personal daily routine hub — multi-module orchestrator built on Claude Code Skills"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "PyMuPDF>=1.24.0",
    "pdf2image>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real Obsidian CLI (deselect with '-m not integration')",
]
addopts = [
    # Phase 1 deferral: these tests target entry scripts that migrate in Task 13 (Phase E)
    # and Task 17 (Phase G). Re-enable by removing each --ignore line as the corresponding
    # script lands at modules/auto-reading/scripts/<name>.py.
    "--ignore=tests/lib/test_assemble_html_script.py",
    "--ignore=tests/lib/test_extract_figures_script.py",
    "--ignore=tests/lib/test_fetch_pdf_script.py",
    "--ignore=tests/lib/test_generate_digest.py",
    "--ignore=tests/lib/test_scan_recent_papers.py",
    "--ignore=tests/lib/test_search_and_filter.py",
    "--ignore=tests/lib/test_search_papers.py",
    "--ignore=tests/lib/test_resolve_and_fetch.py",
    "--ignore=tests/lib/test_generate_note.py",
]
