[project]
name = "start-my-day"
version = "0.1.0"
description = "Personal daily routine hub — multi-module orchestrator built on Claude Code Skills"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "PyMuPDF>=1.24.0",
    "pdf2image>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real Obsidian CLI (deselect with '-m not integration')",
]
addopts = [
    # Phase 1.5 leftover: test_search_and_filter.py needs schema adaptation
    # (tests still reference the pre-envelope output shape). Will be moved
    # to tests/modules/auto-reading/test_today_full_pipeline.py with adapted
    # assertions in P1.5 Task 3.
    "--ignore=tests/lib/test_search_and_filter.py",
]
